qna-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: qna-deployment
  labels:
    app: qna
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qna
  template:
    metadata:
      labels:
        app: qna
    spec:
      containers:
        - name: qna
          image: qna-image:1.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: qna-service
spec:
  selector:
    app: qna
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
