qna-rag-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-qna-to-rag
spec:
  podSelector:
    matchLabels:
      app: rag
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: qna
      ports:
        - protocol: TCP
          port: 80
